force-app/main/default/objects/EMS__c/EMS__c.object-meta.xml
<CustomObject>
    <label>EMS</label>
    <nameField>
        <label>EMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EMS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>