force-app/main/default/objects/EMS__c/fields/Bill_From__c.field-meta.xml
<CustomField>
    <fullName>Bill_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill From</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>EMS</relationshipLabel>
    <relationshipName>EMS</relationshipName>
    <type>Lookup</type>
</CustomField>