force-app/main/default/objects/EMS__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EMS (Bill To Account)</relationshipLabel>
    <relationshipName>EMS1</relationshipName>
    <type>Lookup</type>
</CustomField>