force-app/main/default/objects/EMS__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EMS</relationshipLabel>
    <relationshipName>EMS</relationshipName>
    <type>Lookup</type>
</CustomField>