force-app/main/default/objects/EMS__c/fields/EMS_Link__c.field-meta.xml
<CustomField>
    <fullName>EMS_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_470, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_470))&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMS Link</label>
    <type>Text</type>
</CustomField>