force-app/main/default/objects/EMS__c/fields/EMS_Status__c.field-meta.xml
<CustomField>
    <fullName>EMS_Status__c</fullName>
    <label>EMS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>