force-app/main/default/objects/EMS__c/fields/Jobcode__c.field-meta.xml
<CustomField>
    <fullName>Jobcode__c</fullName>
    <label>Jobcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>