force-app/main/default/objects/EMS__c/fields/Netsuite_Job_Code_Error__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Job_Code_Error__c</fullName>
    <label>Netsuite Job Code Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>