force-app/main/default/objects/EMS__c/fields/Netsuite_Job_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Job_Code_Id__c</fullName>
    <label>Netsuite Job Code Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>