force-app/main/default/objects/EMS__c/fields/NS_Class__c.field-meta.xml
<CustomField>
    <fullName>NS_Class__c</fullName>
    <defaultValue>&quot;3&quot;</defaultValue>
    <label>NS Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>