force-app/main/default/objects/EMS__c/fields/NS_Department__c.field-meta.xml
<CustomField>
    <fullName>NS_Department__c</fullName>
    <defaultValue>&quot;2&quot;</defaultValue>
    <label>NS Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NetSuite_Department</valueSetName>
    </valueSet>
</CustomField>