force-app/main/default/objects/EMS__c/fields/NS_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>NS_Revenue_Schedule__c</fullName>
    <defaultValue>&quot;6&quot;</defaultValue>
    <label>NS Revenue Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NetSuite_Revenue_Schedule</valueSetName>
    </valueSet>
</CustomField>