force-app/main/default/objects/EMS__c/fields/NsClassProjectF__c.field-meta.xml
<CustomField>
    <fullName>NsClassProjectF__c</fullName>
    <description>NetSuite Project Class used by NetSuite</description>
    <formula>Event__r.BillFromProject__r.NetSuite_Class__c</formula>
    <label>NS Project Class</label>
    <type>Text</type>
</CustomField>