force-app/main/default/objects/EMS__c/fields/NsSubsidiaryIdProjectIdF__c.field-meta.xml
<CustomField>
    <fullName>NsSubsidiaryIdProjectIdF__c</fullName>
    <description>NetSuite Project Subsidiary Id used by NetSuite</description>
    <formula>Event__r.BillFromProject__r.Subsidiary_ID__c</formula>
    <label>NS Project Subsidiary Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>