force-app/main/default/objects/EMS__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>22</fullName>
                <default>true</default>
                <label>Event Management Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>