force-app/main/default/objects/EMS__c/fields/SalesOrder_Status__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder_Status__c</fullName>
    <label>SalesOrder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>