force-app/main/default/objects/EMS__c/fields/SubsidiaryID__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryID__c</fullName>
    <formula>Bill_From__r.Subsidiary_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubsidiaryID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>