force-app/main/default/objects/EMS__c/listViews/EMS_JobCode.listView-meta.xml
<ListView>
    <fullName>EMS_JobCode</fullName>
    <columns>NAME</columns>
    <columns>EMS_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NS_Income_GL_Account__c</columns>
    <columns>Jobcode__c</columns>
    <filterScope>Everything</filterScope>
    <label>EMS JobCode</label>
</ListView>